--- a/localization/eng/AigisMod-Keyword-Strings.json
+++ b/localization/eng/AigisMod-Keyword-Strings.json
@@ -205,7 +205,7 @@
       "Cursed:",
       "cursed:"
     ],
-    "DESCRIPTION": "For each #bcurse #bcard in your #yMaster #yDeck, apply the following effect."
+    "DESCRIPTION": "For each #bcurse #bcard in your #yMaster #yDeck, apply the following effect when playing this original card."
   },
   {
     "NAMES": [
