--- a/localization/eng/AigisMod-Keyword-Strings.json
+++ b/localization/eng/AigisMod-Keyword-Strings.json
@@ -1,219 +1,302 @@
 [
   {
-    "PROPER_NAME": "Skill Charge",
+    "PROPER_NAME": "強化スキル",
     "NAMES": [
+      "強化スキル",
       "Skill Charge",
       "Skill_charge",
       "skill_charge"
     ],
-    "DESCRIPTION": "#yRetain. On retain, increase this card power."
+    "DESCRIPTION": "#y保留 の効果を持つ。保留した時、以下の効果を持つ。"
   },
   {
-    "PROPER_NAME": "Imperial Knight",
+    "PROPER_NAME": "帝国騎士",
     "NAMES": [
+      "インペリアルナイト",
+      "帝国騎士",
       "Imperial Knight",
       "Imperial_knight",
       "imperial_knight"
     ],
-    "DESCRIPTION": "Applies an effect #yonce #yper #yturn when playing an #yImperial card while this is in hand."
+    "DESCRIPTION": "このカードが手札にある状態で #y帝国 カードをプレイした時、 #y1ターンに1回 、以下の効果を発動する。"
   },
   {
-    "PROPER_NAME": "Damage Aura",
+    "PROPER_NAME": "ダメージオーラ",
     "NAMES": [
+      "ダメージオーラ",
       "Damage Aura",
       "Damage_aura",
       "damage_aura"
     ],
-    "DESCRIPTION": "On turn end, deal #ydamage equal to amount to all enemies."
+    "DESCRIPTION": "ターン終了時、敵全員に #yダメージ を与える。"
   },
   {
-    "PROPER_NAME": "True Damage",
+    "PROPER_NAME": "貫通",
     "NAMES": [
+      "貫通",
       "True Damage",
       "True_damage",
       "true_damage"
     ],
-    "DESCRIPTION": "Attack from this card ignore #yBlock and #bignores #yThorns, #yAngry, #ySharp #yHides and #yCurl #yUp."
+    "DESCRIPTION": "このカードの攻撃は #yブロック 、 #yトゲ 、 #y憤怒 、 #yシャープハイド 、 #yまるくなる を #b無視 する。"
   },
   {
-    "PROPER_NAME": "Bloom Petal",
+    "PROPER_NAME": "ブルームペタル",
     "NAMES": [
+      "ブルームペタル",
       "Bloom Petal",
       "Bloom_petal",
       "bloom_petal"
     ],
-    "DESCRIPTION": "On your second turn after getting this power: all enemies receive damage (equal to this amount), #b2 #yWeak and #b2 #yVulnerable, then this power is removed."
+    "DESCRIPTION": "パワーを得た2ターン後に全ての敵にダメージと #b2 #y脱力 と #b2 #y弱体 を与え、その後このパワーは取り除かれる。"
   },
   {
-    "PROPER_NAME": "Cursed Rite",
+    "PROPER_NAME": "呪われた儀式",
     "NAMES": [
+      "呪われた儀式",
       "Cursed Rite",
       "Cursed_rite.",
       "Cursed_rite",
       "cursed_rite"
     ],
-    "DESCRIPTION": "You can't heal."
+    "DESCRIPTION": "回復できない。"
   },
   {
-    "PROPER_NAME": "Cursed Voice",
+    "PROPER_NAME": "カースボイス",
     "NAMES": [
+      "カースボイス",
       "Cursed Voice",
       "Cursed_voice.",
       "Cursed_voice",
       "cursed_voice"
     ],
-    "DESCRIPTION": "Negate the next #bbuff the enemy would gain."
+    "DESCRIPTION": "次の敵の #bバフ を無効化する。"
   },
   {
-    "PROPER_NAME": "Air Elemental",
+    "PROPER_NAME": "エアーエレメンタル",
     "NAMES": [
-      "Air Elemental",
+      "エアーエレメンタル",
       "Air_elemental.",
       "Air_elemental",
       "air_elemental"
     ],
-    "DESCRIPTION": "When you play a #ySkill, enemy #yloses #yHP equal to stacks. Remove #b1 stack at the end of the turn if enemy #yattacked."
+    "DESCRIPTION": " #yスキル をプレイするたび、敵はスタックに等しい #yHP を失う。敵が #y攻撃 した時、ターン終了時に #b1 減少する。"
   },
   {
-    "PROPER_NAME": "Ranger Trap",
+    "PROPER_NAME": "トラップ",
     "NAMES": [
+      "トラップ",
       "Ranger Trap",
       "Ranger_trap.",
       "Ranger_trap",
       "ranger_trap"
     ],
-    "DESCRIPTION": "The next time you take #yunblocked damage, deal damage to that enemy equal to #yamount and lose this power."
+    "DESCRIPTION": "次に自分が #y防御できなかった ダメージを受けたとき、その敵に #y値 に等しいダメージを与え、このパワーを失う"
   },
   {
-    "PROPER_NAME": "Seal Talisman",
+    "PROPER_NAME": "退魔の霊符",
     "NAMES": [
+      "退魔の霊符",
       "Seal Talisman",
       "Seal_talisman.",
       "Seal_talisman",
       "seal_talisman"
     ],
-    "DESCRIPTION": "When the enemy #yattack, that enemy loses #b1 #yStrength. #ySeal #yTalisman is reduced by #b1 at the start of your turn."
+    "DESCRIPTION": "敵が #y攻撃 したとき、その敵は #y筋力 を #b1 失う。 #y 退魔の霊符 は、あなたのターン開始時に #b1 減少する。"
   },
   {
-    "PROPER_NAME": "Corpse Marionette",
+    "PROPER_NAME": "操屍人",
     "NAMES": [
+      "操屍人",
       "Corpse Marionette",
       "Corpse_marionette.",
       "Corpse_marionette",
       "corpse_marionette"
     ],
-    "DESCRIPTION": "When you take #yunblocked damage, reduce #ystacks equal to that amount. At turn start, if this has #b0 #ystacks, stun all enemies and remove this power."
+    "DESCRIPTION": " #y防御できなかった ダメージ を受けたとき、その量に等しい #y値 を減らす。ターン開始時、 #y値 が #b0 の場合、すべての敵をスタンさせ、このパワーを取り除く。"
   },
   {
-    "PROPER_NAME": "Ambushed Caravan",
+    "PROPER_NAME": "待ち伏せされたキャラバン",
     "NAMES": [
+      "待ち伏せされたキャラバン",
       "Ambushed Caravan",
       "Ambushed_caravan.",
       "Ambushed_caravan",
       "ambushed_caravan"
     ],
-    "DESCRIPTION": "#yCurse. Unplayable, retain, innate, cannot be removed from your deck. When you take #yunblocked #ydamage, lose #b8 #ygold."
+    "DESCRIPTION": " #y呪い 。 使用不可 。 保留 。デッキから除くことができない。 #y防御できなかった ダメージ を受けたとき、 #b8 #yゴールドを失う"
   },
   {
+    "PROPER_NAME": "暗殺",
     "NAMES": [
+      "暗殺",
       "Assassination",
       "assassination"
     ],
-    "DESCRIPTION": "If it #ydefeats an enemy, return this to #yhand and this card cost becomes #b0 for the turn."
+    "DESCRIPTION": "この攻撃で敵を #y倒した ときこのカードは #y手札 に戻り、ターン中、コストが #b0 "
   },
   {
+    "PROPER_NAME": "鈍足",
     "NAMES": [
+      "鈍足",
       "Sluggish",
       "sluggish",
       "sluggish."
     ],
-    "DESCRIPTION": "Enemies gain #ySlow when applied. When #ySluggish reaches #b0, #ySlow is removed."
+    "DESCRIPTION": "敵に #yスロー を与える。 #y鈍足 が #b 0になると、 #yスロー は解除される。"
   },
   {
+    "PROPER_NAME": "カウンター",
   "NAMES": [
+    "カウンター",
     "Counter",
     "counter",
     "Counter.",
     "counter."
   ],
-  "DESCRIPTION": "When #yattacked, deal damage back to the enemy equal to the number of counter. Removed at the start of your turn."
+  "DESCRIPTION": "攻撃によるダメージを受けるたび、敵に値と同じダメージを与える。ターン開始時に解除される"
   },
   {
+    "PROPER_NAME": "拡散",
     "NAMES": [
+      "拡散",
       "Splash",
       "splash",
       "splash."
     ],
-    "DESCRIPTION": "All other enemies will receive half (rounded down) of the damage from the target monster."
+    "DESCRIPTION": "ターゲット以外の全ての敵に半分（切り捨て）のダメージを与える"
   },
   {
+    "PROPER_NAME": "クールタイム",
     "NAMES": [
+      "クールタイム",
       "Cooldown",
       "cooldown"
     ],
-    "DESCRIPTION": "When this reaches #b0, next use applies an extra effect."
+    "DESCRIPTION": "このカードをプレイするたび、 #b1 減少する。値が #b0 の時、このカードをプレイした時に追加の効果が発動する。"
   },
   {
+    "PROPER_NAME": "ペア",
     "NAMES": [
+      "ペア",
       "Pair",
       "pair"
     ],
-    "DESCRIPTION": "Add #b1 card with the indicated name from #yDraw #yPile to #yhand."
+    "DESCRIPTION": "以下のカードを #b1 枚、 #y山札 から #y手札 に加える。"
   },
   {
+    "PROPER_NAME": "アーチャー",
     "NAMES": [
+      "アーチャー",
+      "弓",
       "Archer",
       "archer"
     ],
-    "DESCRIPTION": "This card #bignores #yThorns, #yAngry, #ySharp #yHides and #yCurl #yUp."
+    "DESCRIPTION": "このカードの攻撃は #yトゲ 、 #y憤怒 、 #yシャープハイド , #yまるくなる を #b無視 する"
   },
   {
+    "PROPER_NAME": "忍術",
     "NAMES": [
+      "忍術",
       "Ninjutsu",
       "ninjutsu"
     ],
-    "DESCRIPTION": "Add #b1 #yShuriken at turn start. Each additional #yNinjutsu you play increases the amount of hits the #yShuriken does by #b1."
+    "DESCRIPTION": "ターン開始時、 #y手裏剣 を #b1 枚手札に加える。追加で #y忍術 を得るごとに、 #y手裏剣 のヒット数が #b1 増加する。"
   },
   {
+    "PROPER_NAME": "拘束",
     "NAMES": [
+      "拘束",
       "Entangled",
       "entangled"
     ],
-    "DESCRIPTION": "You cannot play #yattacks. Remove #b1 stack at beginning of your turn."
+    "DESCRIPTION": "#yアタック をプレイできない。ターン開始時に #b1 減少する"
   },
-
   {
+    "PROPER_NAME": "アンデッド",
     "NAMES": [
+      "アンデッド",
       "Undead",
       "undead",
       "Undead:",
       "undead:"
     ],
-    "DESCRIPTION": "Trigger this effect when #yExhausted."
+    "DESCRIPTION": "このカードを #y廃棄 した時、以下の効果が発動する"
   },
   {
+    "PROPER_NAME": "ヴァンパイア",
     "NAMES": [
+      "ヴァンパイア",
+      "麻痺",
+      "麻痺毒",
       "Vampire",
       "vampire"
     ],
-    "DESCRIPTION": "Attacked enemy gains #yVampire #yBite equal to #yunblocked damage. When #yVampire #yBite reaches #b60, stun that enemy and that enemy receives #b1 #yStun #yResistance."
+    "DESCRIPTION": "攻撃した敵に #y防御されなかった ダメージに等しい #y麻痺毒 を与える。 #y麻痺毒 が #b60 に達したとき、その敵を #yスタン させ、その敵は #yスタン耐性 を #b1 得る。"
   },
   {
+    "PROPER_NAME": "呪術",
     "NAMES": [
+      "呪術",
       "Cursed",
       "cursed",
       "Cursed:",
       "cursed:"
     ],
-    "DESCRIPTION": "For each #bcurse #bcard in your #yMaster #yDeck, apply the following effect when playing this original card."
+    "DESCRIPTION": " #yデッキ にある #b呪い の枚数分、以下の効果を発動する。"
   },
   {
+    "PROPER_NAME": "撃破",
     "NAMES": [
+      "撃破"
+    ],
+    "DESCRIPTION": "このカードの攻撃で敵を倒した時、以下のものを得る。"
+  },
+  {
+    "PROPER_NAME": "バーン",
+    "NAMES": [
+      "バーン",
       "Burn",
       "burn",
       "Burn:",
       "burn:"
     ],
-    "DESCRIPTION": "At the end of your turn, if the enemy #yintends to #yattack, that enemy #ytakes #ydamage. Burn is reduced at the start of the turn"
+    "DESCRIPTION": "あなたのターン終了時に敵が #y攻撃 を #y予定 している場合、その敵は #yダメージ を受ける。バーンはターン開始時に減少する"
+  },
+   {
+    "PROPER_NAME": "気力",
+    "NAMES": [
+      "気力"
+    ],
+    "DESCRIPTION": "次のアタックのダメージはこの数値分、追加ダメージを得る。"
+  },
+   {
+    "PROPER_NAME": "プレートアーマー",
+    "NAMES": [
+      "プレートアーマー"
+    ],
+    "DESCRIPTION": "ターン終了時にバフと 同の #yブロック を付与する。HPが減少した時 #y値 が #b1 減少する。"
+  },
+  {
+    "NAMES": [
+      "自動使用"
+    ],
+    "DESCRIPTION": "このカードを引いたとき自動的にプレイされる。"
+  },
+  {
+    "PROPER_NAME": "仮初のHP",
+    "NAMES": [
+      "仮初のHP",
+      "仮初"
+    ],
+    "DESCRIPTION": "戦闘終了時、 仮初のHP は失われる。"
+  },
+  {
+    "PROPER_NAME": "残り使用回数",
+    "NAMES": [
+      "残り使用回数",
+      "残り回数"
+    ],
+    "DESCRIPTION": "一定回数使用すると #y廃棄 。"
   }
 ]
