--- a/localization/eng/AigisMod-Potion-Strings.json
+++ b/localization/eng/AigisMod-Potion-Strings.json
@@ -1,34 +1,34 @@
 {
         "aigisMod:StrengthDownPotion": {
-                "NAME": "Strength Down Potion",
-                "DESCRIPTIONS": ["Target loses #b", " #yStrength."]
+                "NAME": "貧弱ポーション",
+                "DESCRIPTIONS": ["#y筋力 #b", " を低下させる。"]
         },
         "aigisMod:StrengthDownPotionEmperor": {
-                "NAME": "Strength Down Potion",
-                "DESCRIPTIONS": ["Target loses #b", " #yStrength."]
+                "NAME": "貧弱ポーション",
+                "DESCRIPTIONS": ["#y筋力 #b", " を低下させる。"]
         },
         "aigisMod:SlowPotion": {
-                "NAME": "Space Time Potion",
-                "DESCRIPTIONS": ["Target gains #b", " #ySluggish."]
+                "NAME": "時空ポーション",
+                "DESCRIPTIONS": ["#y鈍足 #b", " を与える。"]
         },
         "aigisMod:SlowPotionEmperor": {
-                "NAME": "Space Time Potion",
-                "DESCRIPTIONS": ["Target gains #b", " #ySluggish."]
+                "NAME": "時空ポーション",
+                "DESCRIPTIONS": ["#y鈍足 #b", " を与える。"]
         },
         "aigisMod:CounterPotion": {
-                "NAME": "Counter Potion",
-                "DESCRIPTIONS": ["Gain #b", " #yCounter."]
+                "NAME": "カウンターポーション",
+                "DESCRIPTIONS": ["カウンター #b", " を得る。"]
         },
         "aigisMod:CounterPotionEmperor": {
-                "NAME": "Counter Potion",
-                "DESCRIPTIONS": ["Gain #b", " #yCounter."]
+                "NAME": "カウンターポーション",
+                "DESCRIPTIONS": ["カウンター #b", " を得る。"]
         },
         "aigisMod:DemonicDrink": {
-                "NAME": "Demonic Drink",
-                "DESCRIPTIONS": ["Gain #b", " #yDamage #yAura."]
+                "NAME": "悪魔フロート",
+                "DESCRIPTIONS": ["#yダメージオーラ #b", " を得る"]
         },
         "aigisMod:DemonicDrinkEmperor": {
-                "NAME": "Demonic Drink",
-                "DESCRIPTIONS": ["Gain #b", " #yDamage #yAura."]
+                "NAME": "悪魔フロート",
+                "DESCRIPTIONS": ["#yダメージオーラ #b", " を得る"]
         }
 }
