--- a/localization/eng/AigisMod-UI-Strings.json
+++ b/localization/eng/AigisMod-UI-Strings.json
@@ -1,266 +1,267 @@
 {
   "CharTooltipsID": {
     "TEXT": [
-      "Witch", "Enemies attacked by this card receives temporary #ySlow.",
-      "Archer", "This card #bignores enemy powers that activate when they are #yattacked, like Thorns.",
-      "Princess", "Gain #b1 #yMax #yHP when you add a #yPrincess card to your Deck.",
-      "Undead", "This class activates #badditional effects when #yexhausted.",
-      "Black Rarity", "This type of character have #ybranching paths when #yupgrading. Only Rare cards may have this property.",
-      "Eastern Country", "This card applies for other effects listing #yEastern #yCountry cards.",
-      "Hero", "This card can be upgraded any number of times. NL Only obtainable by the #yHero #yCrystal relic and #yTower #yof #yHeroes event.",
-      "White Empire", "This card has synergies with effects listing Imperial cards, only in the card pool of #yThe #yEmperor.",
-      "Curse User", "When played, add the #yCurse this card previews to your Master Deck if you don't have it.",
-      "Demon", "If this card is in Exhaust Pile at the start of your turn: add this to your hand with -1 of its #yOriginal cost for that turn.",
-      "Aerial", "When played, shuffle #b1 #yAir #ySignal to your Draw Pile. Increase damage by #b1 for each #yAir #ySignal Exhausted.",
-      "Necromancer", "Increase damage by #b1 for each #yUndead #yExhausted. When this deals unblocked damage, add #b1 #ySkeleton #yUnit to your hand."
+      "ウィッチ", "敵に攻撃した時、一時的に #yスロー を与える。",
+      "アーチャー", "このカードはトゲのような #y攻撃時 に発動する能力を #b無視 する。",
+      "プリンセス", "あなたのデッキに #yプリンセス カードを1枚加えた時、 #y最大 #yHP が #b1 増加する。",
+      "アンデッド", "このクラスは #y廃棄 された時 #b追加 効果が発動する。",
+      "レアリティブラック", "このタイプのキャラクターは、 #yアップグレード の際に #y分岐 することがある。この特性は、レアカードだけが持つ。",
+      "東の国", "このカードは #y東の国 を指名する効果の対象となる。",
+      "英傑", "このカードは何度でもアップグレードができる。 NL #y英傑結晶 のレリックと #y英傑の塔 のイベントでのみ入手可能。",
+      "白の帝国", "このカードは、 #y帝国 を指名する効果の対象となる。",
+      "呪術師", "プレイした時、表示された #y呪い がデッキに入っていない場合、追加する。",
+      "デーモン", "あなたのターンの開始時にこのカードが廃棄山にある場合、そのターンの間 #y本来 のコストから #b-1 して手札に加える。",
+      "飛行隊", "プレイした時、 #yエアーシグナル を #b1 枚あなたの山札に加える。 #yエアーシグナル が廃棄されるごとにダメージが #b1 増加する。",
+      "ネクロマンサー", " #yアンデッド が #y廃棄 されるたび、ダメージが #b1 増加する。防御されずにダメージを与えた時、 #yスケルトン を手札に #b1 枚加える。"
     ]
   },
 
   "AmbrosePDiscardAction": {
     "TEXT": [
-      "discard (up to 3)",
-      "discard."
+      "捨てる (３つまで)",
+      "捨てる"
     ]
   },
 
   "ArmorSmithAction": {
     "TEXT": [
-      "upgrade."
+      "アップグレード."
     ]
   },
 
   "CindyAction": {
     "TEXT": [
-      "discard."
+      "捨てる"
     ]
   },
 
   "CursedBoundaryAction": {
     "TEXT": [
-      "discard."
+      "捨てる"
     ]
   },
 
   "EasternMaidAction": {
     "TEXT": [
-      "reduce it's cost for the turn."
+      "コストを減らすカードを選択する"
     ]
   },
 
   "DengunsCommandAction": {
     "TEXT": [
-      "Select a card to put at the top of the Draw Pile.",
-      "Select cards to put at the top of the Draw Pile.",
-      "I don't have an Eastern Country in Draw Pile..."
+      "手札のカード1枚を山札の1番上に置く",
+      "手札のカードを山札の1番上に置く",
+      "山札に東の国カードがない…"
     ]
   },
 
   "LepuruAction": {
     "TEXT": [
-      "return to draw pile.",
-      "return to draw pile."
+      "山札に戻る",
+      "山札に戻る"
     ]
   },
 
   "OldClergymanAction": {
     "TEXT": [
-      "exhaust."
+      "廃棄"
     ]
   },
 
   "SuzuneAction": {
     "TEXT": [
-      "Choose a card to add to your hand."
+      "手札に加える1枚を選ぶ"
     ]
   },
 
   "SwordSmithAction": {
     "TEXT": [
-      "upgrade."
+      "アップグレード"
     ]
   },
 
   "TowaAction": {
     "TEXT": [
-      "Choose 1 witch to add to top of Draw Pile.",
-      "Choose 2 witches to add to top of Draw Pile.",
-      "I don't have a witch card in my deck..."
+      "ウィッチ1枚を山札の1番上に置く",
+      "ウィッチ2枚を山札の1番上に置く",
+      "山札にウィッチカードがない…"
     ]
   },
 
   "VampireHunterDPAction": {
     "TEXT": [
-      "Choose a card to exhaust."
+      "1枚廃棄を選ぶ"
     ]
   },
 
   "YashimaAction": {
     "TEXT": [
-      "Choose a card to copy it's effect."
+      "1枚のカードの効果をコピーする"
     ]
   },
 
   "PrincessMaidAction": {
     "TEXT": [
-      "Choose a card to add to your hand.",
-      "Choose cards to add to your hand.",
-      "i don't have a princess card in my deck..."
+      "手札に加える1枚を選ぶ",
+      "手札に加えるカードを選ぶ",
+      "山札にプリンセスカードがない…"
     ]
   },
 
   "RisleyAction": {
     "TEXT": [
-      "reduce it's cost."
+      "コストを1減少する"
     ]
   },
 
   "ShizukaAction": {
     "TEXT": [
-      "discard.",
-      "I don't have an Eastern Country in hand..."
+      "捨てる",
+      "手札に東の国カードがない…"
     ]
   },
 
   "AirshipAction": {
     "TEXT": [
-      "Select an Imperial card to add to your hand.",
-      "I don't have an Imperial Card in deck..."
+      "帝国カードを1枚手札に加える",
+      "山札に帝国カードがない…"
     ]
   },
 
   "LilyAction": {
     "TEXT": [
-      "play from your hand. (Optional)"
+      "手札から選んでプレイする（任意）"
     ]
   },
 
   "BlitzkriegAction": {
     "TEXT": [
-      " what Imperial cards to play. (Optional) ",
-      " what Imperial card to play. (Optional)",
-      "Can Select: "
+      "プレイするカードを選ぶ（任意）",
+      "手札からプレイするカードを1枚選ぶ（任意）",
+      "選択"
     ]
   },
 
   "LieselotteAction": {
     "TEXT": [
-      "Discard. (Optional)"
+      "捨てる（任意）"
     ]
   },
 
   "MephistoAction": {
     "TEXT": [
-      "Select an Imperial or Demon card to exhaust. (Optional)",
-      "I don't have an Imperial or Demon Card in deck..."
+      "廃棄する帝国とデーモンカードを選ぶ（任意）",
+      "山札に帝国とデーモンカードがない…"
     ]
   },
   "AuroraAction": {
     "TEXT": [
-      "Select cards to Exhausts. (Optional)"
+      "廃棄するカードを選ぶ（任意）"
     ]
   },
   "WhiteDevotionAction": {
     "TEXT": [
-      "exhaust. (Optional)"
+      "廃棄（任意）"
     ]
   },
   "CallingYouAction": {
     "TEXT": [
-      "Choose a character to add to your hand.",
-      "Choose characters to add to your hand.",
-      "i don't have an Imperial character in my discard pile..."
+      "手札に加えるキャラクターを1枚選ぶ",
+      "手札に加えるキャラクターを選ぶ",
+      "捨て札に帝国カードがない…"
     ]
   },
   "AirSignalAction": {
     "TEXT": [
-      "Choose a card to add to your hand.",
-      "Choose cards to add to your hand.",
-      "i don't have an Aerial card in my discard pile..."
+      "手札に加えるカードを1枚選択する",
+      "手札に加えるカードを選択する",
+      "捨て札に飛行隊カードがない…"
     ]
   },
   "DemonCommandAction": {
     "TEXT": [
-      "exhaust."
+      "廃棄"
     ]
   },
   "HelmineAction": {
     "TEXT": [
-      "exhaust.",
-      "I don't have cards in hand..."
+      "廃棄",
+      "手札にカードがない…"
     ]
   },
   "StrikeModifStrings": {
     "TEXT": [
-      "Vulnerable.",
-      "Poison.",
-      " NL Apply ", " Vulnerable.",
-      " NL Apply ", " Poison."
+      "弱体.",
+      "毒",
+      " NL Apply ", " 弱体",
+      " NL Apply ", " 毒"
     ]
   },
   "BelpheAction": {
     "TEXT": [
-      "Exhaust ", " cards. (Optional)", "I don't have anything in discard pile..."
+      "", " 枚廃棄する（任意）", "捨て札がない…"
     ]
   },
   "ImperialInventorAction": {
     "TEXT": [
-      "upgrade. (Optional)"
+      "アップグレード（任意）"
     ]
   },
   "MakaiCookingAction": {
     "TEXT": [
-      "exhaust."
+      "廃棄"
     ]
   },
   "NormaAction": {
     "TEXT": [
-      "You can exhaust up to ", " Demon card.", "I don't have Demons in discard Pile..."
+      "デーモンカードを ", " 枚まで廃棄する", "デーモンカードが捨て札にない…"
     ]
   },
   "OtherworldCallAction": {
     "TEXT": [
-      "Choose ", " Demons to exhaust.", "I don't have Demons in my Draw Pile..."
+      "廃棄するデーモンカードを ", " 枚選ぶ", "デーモンカードが山札にない…"
     ]
   },
   "NatalieAction": {
     "TEXT": [
-      "discard."
+      "捨てる"
     ]
   },
   "TsugumiExhaustAction": {
     "TEXT": [
-      "exhaust."
+      "廃棄"
     ]
   },
   "TsugumiRecoverAction": {
     "TEXT": [
-      "Choose a card to add to your hand.",
-      "I don't have Eastern Country cards in Discard Pile..."
+      "手札に加えるカードを1枚選ぶ",
+      "東の国カードが捨て札にない…"
     ]
   },
   "EstrieAction": {
     "TEXT": [
-      "You can exhaust up to ", " Undead cards.", "I don't have an Undead in discard Pile..."
+      "廃棄するアンデッドカードを ", " 枚選択する", "アンデッドカードが捨て札にない…"
     ]
   },
   "SpookyPhenomenonAction": {
     "TEXT": [
-      "exhaust."
+      "廃棄"
     ]
   },
   "FedoraAction": {
     "TEXT": [
-      "exhaust."
+      "廃棄"
     ]
   },
   "TenguBlazeAction": {
     "TEXT": [
-      "exhaust."
+      "廃棄"
     ]
   },
   "UndeadWorldAction": {
     "TEXT": [
-      "Choose 1 Undead to add to your hand.", "i don't have an Undead card in Exhaust Pile..."
+      "手札に加えるアンデット1枚を選択する", 
+      "廃棄山にアンデッドカードかない…"
     ]
   }
 }
