--- a/localization/eng/AigisMod-UI-Strings.json
+++ b/localization/eng/AigisMod-UI-Strings.json
@@ -82,15 +82,15 @@
 
   "TowaAction": {
     "TEXT": [
-      "ウィッチ1枚を山札の1番上に置く",
-      "ウィッチ2枚を山札の1番上に置く",
+      "山札の1番上に置くウィッチを1枚選択",
+      "山札の1番上に置くウィッチを2枚選択",
       "山札にウィッチカードがない…"
     ]
   },
 
   "VampireHunterDPAction": {
     "TEXT": [
-      "1枚廃棄を選ぶ"
+      "廃棄する1枚を選ぶ"
     ]
   },
 
@@ -193,8 +193,8 @@
     "TEXT": [
       "弱体.",
       "毒",
-      " NL Apply ", " 弱体",
-      " NL Apply ", " 毒"
+      " NL 弱体 ", " を与える。",
+      " NL 毒 ", " を与える。"
     ]
   },
   "BelpheAction": {
